--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,6 +1,12 @@
 ---
+import type { GetStaticPaths } from "astro";
 import BaseLayout from "@layouts/BaseLayout.astro";
-import { getProjectBySlug } from "@data/projects";
+import { getProjectBySlug, projects } from "@data/projects";
+
+export const getStaticPaths: GetStaticPaths = () =>
+  projects.map((project) => ({
+    params: { slug: project.slug },
+  }));
 
 const { slug } = Astro.params;
 const project = slug ? getProjectBySlug(slug) : undefined;
